--- a/tmg/index.html
+++ b/tmg/index.html
@@ -5,67 +5,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all">
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+    <link rel="stylesheet" href="../common/common.css">
+    <link rel="stylesheet" href="../common/common-messagerie.css">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="../common/common-wiki.css">
+    <link rel="stylesheet" href="../common/common-msg-responsive.css">
+
+    <link rel="stylesheet" href="station.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../fonts/helvetica.css">
     <title>Total Marketing Gabon | TMG</title>
 </head>
 
 <body>
 
     <header>
-        <img class="logo-total" src="https://upload.wikimedia.org/wikipedia/fr/d/dd/TOTAL_SA_logo.svg" alt="Logo Total">
+        <h1 class="logo-title">Total Marketing Gabon</h1>
 
         <div class="user-informations">
-            <h1 class="display-fn"></h1>
-            <button>changer mot de passe</button>
-            <button>Se déconnecter</button>
+            <h2 id="display-fn"></h2>
+            <h1 id="down" class="initial">ON</h1>
+            <div class="dropdown-menu">
+                <div class="personal">
+                    <h1 id="load-photo" class="initial">ON</h1>
+                    <div class="personal-data">
+                        <p class="fullname">Nve Hounkponou Orphée</p>
+                        <p class="username">nveorphee</p>
+                    </div>
+                </div>
+                <button>Changer le mot de passe</button>
+                <button id="sign-out">Se déconnecter</button>
+            </div>
         </div>
     </header>
 
     <div class="main-container">
-        <h1>Wiki station</h1>
-
-        <button>créer un wiki</button>
-
-        <div class="create-wiki">
-            <div class="form-group">
-                <label>Description</label>
-                <textarea id="description" cols="30" rows="10" placeholder="Ecrivez la description ici"></textarea>
-            </div>
-
-            <button class="simple-button" title="Ajouter un document"><i class="fa fa-paperclip"></i></button>
-            <div class="file-container">
-
-            </div>
-            <button>Publier</button>
+        <div class="nav-bar">
+            <a href="#" class="nav-bar-item home-item selected-item">Accueil</a>
+            <a href="#" class="nav-bar-item message-item">Messagerie</a>
+            <a href="#" class="nav-bar-item wiki-station-item">Wiki</a>
         </div>
 
-        <div class="wiki-container">
-            <div class="wiki">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam iste, rerum cumque suscipit iure ex magnam facere fugiat omnis vero? Quasi voluptas distinctio nisi in commodi praesentium delectus, tempore vero.</p>
-                <a href="#">Document 1 <span>10M</span></a>
-                <a href="#">Document 2 <span>15M</span></a>
-            </div>
+        <div class="content accueil-content selected-item">
+            <div class="station-main-content">
+                <div class="station-list">
+                </div>
+                <div class="station-details">
 
-            <div class="wiki">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam iste, rerum cumque suscipit iure ex magnam facere fugiat omnis vero? Quasi voluptas distinctio nisi in commodi praesentium delectus, tempore vero.</p>
-                <a href="#">Document 1 <span>10M</span></a>
-                <a href="#">Document 2 <span>15M</span></a>
-            </div>
-
-            <div class="wiki">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam iste, rerum cumque suscipit iure ex magnam facere fugiat omnis vero? Quasi voluptas distinctio nisi in commodi praesentium delectus, tempore vero.</p>
-                <a href="#">Document 1 <span>10M</span></a>
-                <a href="#">Document 2 <span>15M</span></a>
-            </div>
-
-            <div class="wiki">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam iste, rerum cumque suscipit iure ex magnam facere fugiat omnis vero? Quasi voluptas distinctio nisi in commodi praesentium delectus, tempore vero.</p>
-                <a class="document" href="#">Document 1 <span>10M</span></a>
-                <a class="document" href="#">Document 2 <span>15M</span></a>
+                </div>
             </div>
         </div>
+
+        <div class="content messagerie-content">
+            <div class="cols">
+                <div class="col col-1">
+                    <button id="new-message-button"><i class="material-icons">create</i> <span> Nouveau message</span></button>
+                    <div class="msg-nav-bar">
+                        <a href="#" class="msg-nav-item msg-item-receives
+                                msg-selected"><i class="material-icons">all_inbox</i> <span> Message reçu</span></a>
+                        <a href="#" class="msg-nav-item msg-item-send"><i class="material-icons">send</i> <span>Message envoyé</span></a>
+                    </div>
+                </div>
+                <div class="col col-2">
+                </div>
+                <div class="col col-3">
+
+                </div>
+
+                <div class="modal create-message-modal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <div class="file-form-group">
+                                <label for="add-attachment-msg"><i class="material-icons">attach_file</i>Fichier</label>
+                                <input type="file" id="add-attachment-msg">
+                            </div>
+                            <div class="white-space"></div>
+                            <button id="send-message" class="modal-menu-item"><i class="material-icons">send</i>Envoyer</button>
+                            <button id="cancel-message" class="modal-menu-item"><i class="material-icons">clear</i>Annuler</button>
+                        </div>
+
+                        <div class="modal-main-content create-message-container">
+                            <div class="w-msg-h">
+                                <span>A: </span>
+                                <select class="gerant-list">
+                                </select>
+                                <button class="add-gerant button-icon" title="Ajouter ce gerant"><i class="material-icons">person_add</i></button>
+                                <button class="add-all-gerant button-icon" title="Ajouter tous les gérants"><i class="material-icons">group_add</i></button>
+                            </div>
+                            <div class="dst-list">
+
+                            </div>
+                            <div class="attachment-list">
+
+                            </div>
+                            <span>Objet</span>
+                            <input type="text" id="message-objet" placeholder="Ici...">
+                            <textarea id="the-message" cols="30" rows="10" placeholder="Ecrivez votre message ici"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content wiki-content">
+
+        </div>
+
     </div>
+
+    <script src="./script.js" type="module"></script>
 </body>
 
 </html>
