--- a/login/index.html
+++ b/login/index.html
@@ -12,13 +12,8 @@
 </head>
 
 <body>
-
-    <header>
-        <h1 class="logo-title">Total Marketing Gabon</h1>
-    </header>
-
     <div class="main-content">
-        <h1 class="welcome-message">Plateforme extranet de Total Marketing Gabon</h1>
+        <h1 class="welcome-message">Connectez-vous pour ouvrir une session</h1>
 
         <div class="login-form">
             <div class="form-group">
