--- a/root/index.html
+++ b/root/index.html
@@ -44,8 +44,7 @@
                     <div class="search-bar">
                         <input type="text" id="search-bar-input" placeholder="Rechercher un utilisateur">
                     </div>
-                    <button id="add-user-button"><i class="material-icons">person_add</i>Ajouter
-                            un utilisitateur</button>
+                    <button id="add-user-button"><i class="material-icons">person_add</i>Ajouter un utilisitateur</button>
                     <button id="actualize-users-list"><i
                                 class="material-icons">refresh</i> Recharger</button>
                 </div>
